--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<title>Chick-fil-A Jobs</title>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="normalize.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<header>
