--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="#" class="headerLogoContainer"><img src="assets/CFA Circle C Logo - White.png" alt="Chick-fil-A Circle Logo" class=".logo"></a>
+			<a href="#" class="headerLogoContainer"><img src="CFA Circle C Logo - White.png" alt="Chick-fil-A Circle Logo" class=".logo"></a>
 		</header>
 		<main>
 			<h1>More than a job!</h1>
@@ -82,13 +82,13 @@
 				<h6>Social Media</h6>
 				<span class="footerStore">North Myrtle Beach</span>
 				<section class="smLinks">
-					<a href="#"><img src="assets/FB white.png" alt="Facebook Logo"></a>
-					<a href="#"><img src="assets/Insta white.png" alt="Instagram Logo"></a>
+					<a href="#"><img src="FB white.png" alt="Facebook Logo"></a>
+					<a href="#"><img src="Insta white.png" alt="Instagram Logo"></a>
 				</section>
 				<span class="footerStore">US 17 at Hwy 22</span>
 				<section class="smLinks">
-					<a href="#"><img src="assets/FB white.png" alt="Facebook Logo"></a>
-					<a href="#"><img src="assets/Insta white.png" alt="Instagram Logo"></a>
+					<a href="#"><img src="FB white.png" alt="Facebook Logo"></a>
+					<a href="#"><img src="Insta white.png" alt="Instagram Logo"></a>
 				</section>
 			</section>
 		</footer>
