--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		<title>Chick-fil-A Jobs</title>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<header>
-			<a href="#" class="headerLogoContainer"><img src="CFA Circle C Logo - White.png" alt="Chick-fil-A Circle Logo" class=".logo"></a>
+			<a href="#" class="headerLogoContainer"><img src="assets/CFA Circle C Logo - White.png" alt="Chick-fil-A Circle Logo" class=".logo"></a>
 		</header>
 		<main>
 			<h1>More than a job!</h1>
@@ -82,16 +82,15 @@
 				<h6>Social Media</h6>
 				<span class="footerStore">North Myrtle Beach</span>
 				<section class="smLinks">
-					<a href="#"><img src="FB white.png" alt="Facebook Logo"></a>
-					<a href="#"><img src="Insta white.png" alt="Instagram Logo"></a>
+					<a href="#"><img src="assets/FB white.png" alt="Facebook Logo"></a>
+					<a href="#"><img src="assets/Insta white.png" alt="Instagram Logo"></a>
 				</section>
 				<span class="footerStore">US 17 at Hwy 22</span>
 				<section class="smLinks">
-					<a href="#"><img src="FB white.png" alt="Facebook Logo"></a>
-					<a href="#"><img src="Insta white.png" alt="Instagram Logo"></a>
+					<a href="#"><img src="assets/FB white.png" alt="Facebook Logo"></a>
+					<a href="#"><img src="assets/Insta white.png" alt="Instagram Logo"></a>
 				</section>
 			</section>
 		</footer>
-		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
